--- a/packer/files-prov/template/Vagrantfile
+++ b/packer/files-prov/template/Vagrantfile
@@ -14,4 +14,7 @@ Vagrant.configure("2") do |config|
 
   config.vm.synced_folder "..", "/vagrant"
 
+  # file provisioning
+  config.vm.provision "file", source: "../../packer/files-prov", destination: "/home/vagrant/files-prov"
+
 end
