--- a/test/provision/Vagrantfile
+++ b/test/provision/Vagrantfile
@@ -17,8 +17,8 @@ Vagrant.configure("2") do |config|
 
       machine.vm.provider "virtualbox" do |vb|
         vb.name = $basebox_name
-        vb.cpus = 1
-        vb.customize ["modifyvm", :id, "--memory", "1024" ]
+        vb.cpus = 2
+        vb.customize ["modifyvm", :id, "--memory", "4096" ]
         vb.customize ["modifyvm", :id, "--natdnshostresolver1", "on"]
         vb.customize ["modifyvm", :id, "--natdnsproxy1", "on"]
         vb.customize ["modifyvm", :id, "--groups", "/basebox-test" ]
@@ -33,6 +33,7 @@ Vagrant.configure("2") do |config|
         machine.vm.provision :shell do |cfg|
           cfg.name = File.basename(scriptpath)
           cfg.path = scriptpath
+          cfg.args = "#{$basebox_name}"
         end        
       }
 
