new basebox version 2.0.1614012334

--- a/inspec/baseline-ubuntu-18.04-rke/inspec.yml
+++ b/inspec/baseline-ubuntu-18.04-rke/inspec.yml
@@ -1,5 +1,5 @@
-name: basebox-ubuntu-18.04-rke
-title: profile for vagrant image ubuntu-18.04-rke
+name: basebox-ubuntu-18.04-k3s
+title: profile for vagrant image ubuntu-18.04-k3s
 maintainer: Urs Voegele
 copyright: Urs Voegele
 copyright_email: unext@bluewin.com
