--- a/test/provision/Vagrantfile
+++ b/test/provision/Vagrantfile
@@ -15,7 +15,7 @@ Vagrant.configure("2") do |config|
       # define guest hostname
       machine.vm.hostname = "#{$basebox_hostname}"
 
-      machine.vm.provider "virtualbox" do |vb|
+     machine.vm.provider "virtualbox" do |vb|
         vb.name = $basebox_name
         vb.cpus = 2
         vb.customize ["modifyvm", :id, "--memory", "4096" ]
@@ -25,17 +25,20 @@ Vagrant.configure("2") do |config|
         vb.customize ["modifyvm", :id, "--vram", 256 ]
       end
 
-      # file provisioning
+       # file provisioning
       machine.vm.provision "file", source: "../../packer/files-prov", destination: "/home/vagrant/files-prov"
       
-      # shell provisioning
-      scriptlist.each { |scriptpath|
-        machine.vm.provision :shell do |cfg|
-          cfg.name = File.basename(scriptpath)
-          cfg.path = scriptpath
-          cfg.args = "#{$basebox_name}"
-        end        
-      }
+      # create ssh key
+      machine.vm.provision :shell do |cfg|
+        cfg.name = "create-ssh-key.sh"
+        cfg.path = "../../packer/provisioners/create-ssh-key.sh"
+      end
+      
+      # base provisiioning
+      machine.vm.provision :shell do |cfg|
+        cfg.name = "base-provisining.sh"
+        cfg.path = "../../packer/provisioners/base-provisioning.sh"
+      end
 
     end   
 
